fix(multiple): incosistent item text truncation when used together with MDC list (#23138)
The MDC option, option group and menu share some styles with the MDC list, but deliberately exclude others in order to allow the text to wrap. The problem is that if an MDC list is seen first on the page, its styles will conflict with the others.

These changes add an explicit override to avoid the conflict.

--- a/src/material-experimental/mdc-menu/menu.scss
+++ b/src/material-experimental/mdc-menu/menu.scss
@@ -82,6 +82,12 @@ mat-menu {
     }
   }
 
+  // Needs to be overwritten explicitly, because the style can
+  // leak in from the list and cause the text to truncate.
+  .mdc-list-item__primary-text {
+    white-space: normal;
+  }
+
   @include a11y.high-contrast(active, off) {
     $outline-width: 1px;
 
